fix: changes some colors to improve contrast

--- a/css/knowledge.css
+++ b/css/knowledge.css
@@ -57,7 +57,7 @@
     border: 2px solid 
     rgba(156, 128, 136, 0.2);
     border-radius: 10px;
-    color: #977186;
+    color: #804d69;
     position: relative;
     z-index: 9999;
     min-width: 3.6em;
