--- a/css/projects.css
+++ b/css/projects.css
@@ -59,7 +59,7 @@
     border-radius: 10px;
     border: 2px solid 
     rgba(156, 128, 136, 0.2);
-    color: #977186;
+    color: #804d69;
     display: flex;
     align-items: center;
 }
